--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,33 +10,42 @@ body {
 header {
 	background-color: #fff;
 	border-color: #ccc;
-	height: 50px;
+	height: 65px;
 	margin-bottom: 25px;
 }
 
 h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	/* Change colore to #fff */
-	color: #eee;
+	color: #fff;
+	font-size: 2em;
 }
 
 h2 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
-	margin-left: 75px;
+	margin-bottom: 25px;
+	font-size: 1.5em;
 }
 
 .name-box {
-	height: 50px;
-	width: 150px;
+	height: 65px;
+	width: 250px;
 	background-color: #4aaaa5;
 	text-align: center;
-	line-height: 50px;
+	line-height: 65px;
 	margin-left: 75px;
+
 }
 
 .main-content {
 	width: 650px;
 	margin-left: 75px;
+	padding: 25px;
 	background: #fff;
+	line-height: 200%;
+}
+
+#profile-photo {
+	margin-right: 25px;
+	float: left;
 }
