--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,20 +29,33 @@ h2 {
 
 .name-box {
 	height: 65px;
-	width: 250px;
+	width: 275px;
 	background-color: #4aaaa5;
 	text-align: center;
 	line-height: 65px;
-	margin-left: 75px;
+	margin-left: 30px;
 
 }
 
+.container {
+	width: 960px;
+	margin: 0 ;
+}
+
+.sidebar {
+	width: 270px;
+	margin-left: 20px;
+	background: #fff;
+	float: left;
+}
+
 .main-content {
-	width: 650px;
-	margin-left: 75px;
+	width: 570px;
+	margin-left: 30px;
 	padding: 25px;
 	background: #fff;
 	line-height: 200%;
+	float: left;
 }
 
 #profile-photo {
