--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header {
 	border-color: #ccc;
 	height: 65px;
 	margin-bottom: 25px;
+	margin-right: auto;
 }
 
 h1 {
@@ -27,6 +28,13 @@ h2 {
 	font-size: 1.5em;
 }
 
+h3 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
+	margin-bottom: 25px;
+	font-size: 1.17em;
+}
+
 .name-box {
 	height: 65px;
 	width: 275px;
@@ -39,14 +47,16 @@ h2 {
 
 .container {
 	width: 960px;
-	margin: 0 ;
+	margin: 0 auto;
 }
 
 .sidebar {
 	width: 270px;
 	margin-left: 20px;
+	text-align: center;
 	background: #fff;
 	float: left;
+	padding-top: 20px;
 }
 
 .main-content {
@@ -56,6 +66,10 @@ h2 {
 	background: #fff;
 	line-height: 200%;
 	float: left;
+}
+
+.footer {
+
 }
 
 #profile-photo {
