--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@ header {
 	border-color: #ccc;
 	height: 65px;
 	margin-bottom: 25px;
-	margin-right: auto;
 }
 
 h1 {
@@ -35,13 +34,19 @@ h3 {
 	font-size: 1.17em;
 }
 
+.header-box {
+	width: 940px;
+	margin-bottom: 25px;
+	margin-left: 30px;
+	float: left;
+}
+
 .name-box {
 	height: 65px;
 	width: 275px;
 	background-color: #4aaaa5;
 	text-align: center;
 	line-height: 65px;
-	margin-left: 30px;
 
 }
 
