--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,9 @@ h3 {
 }
 
 .header-box {
-	width: 940px;
-	margin-bottom: 25px;
-	margin-left: 30px;
-	float: left;
+	position: relative;
+	width: 960px;
+	margin: 0 auto;
 }
 
 .name-box {
@@ -47,6 +46,7 @@ h3 {
 	background-color: #4aaaa5;
 	text-align: center;
 	line-height: 65px;
+	margin-left: 30px;
 
 }
 
@@ -74,6 +74,13 @@ h3 {
 }
 
 .footer {
+	position: fixed;
+	bottom: 0;
+	background: #666;
+	border-top-style: solid;
+	border-top-width: 5px;
+	border-color: #4aaaa5;
+	height: 65px;
 
 }
 
