--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@ header {
 	margin-bottom: 25px;
 }
 
+nav {
+	height: 65px;
+	margin-bottom: 25px;
+	float: right;
+}
+
 h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #fff;
@@ -56,6 +62,7 @@ footer {
 }
 
 .name-box {
+	display: inline-block;
 	height: 65px;
 	width: 275px;
 	background-color: #4aaaa5;
@@ -63,6 +70,21 @@ footer {
 	line-height: 65px;
 	margin-left: 30px;
 
+}
+
+.nav-box {
+	display: inline-block;
+	padding: 32.5px;
+	height: 65px;
+	margin-bottom: 25px;
+	float: right;
+}
+
+.link {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-color: #777;
+	text-decoration: none;
+	margin-right: 20px;
 }
 
 .container {
