--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,10 +109,10 @@ footer {
 	padding-top: 20px;
 }
 
-.social-icons {
+.social-icon {
 	align-items: center;
-	width: 50px;
-	height: 50px;
+	max-width: 50px;
+	max-height: 50px;
 }
 
 .footer-container {
