--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ footer {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
 	text-decoration: none;
-	margin-right: 40px;
+	margin-right: 20px;
 }
 
 .container {
@@ -109,12 +109,17 @@ footer {
 	padding-top: 20px;
 }
 
+.header-line {
+	border-bottom: 2px solid #ddd;
+	width: 85%;
+	margin-left: 1px;
+}
+
 .social-icon {
 	align-items: center;
 	max-width: 50px;
 	max-height: 50px;
 	text-decoration: none;
-	/*border: 0;*/
 	margin: 30px 0 30px 5px;
 }
 
