--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,15 +29,15 @@ h1 {
 h2 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
-	margin-bottom: 25px;
+	margin-bottom: 15px;
 	font-size: 1.5em;
 }
 
 h3 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
-	margin-bottom: 25px;
-	font-size: 1.17em;
+	margin-bottom: 15px;
+	font-size: 1.25em;
 }
 
 footer {
@@ -51,13 +51,13 @@ footer {
 	height: 65px;
 	width: 100%;
 	clear: both;
-	
 }
 
 .header-box {
 	position: relative;
 	width: 960px;
 	margin: 0 auto;
+	border-bottom: 3px solid #ccc;
 }
 
 .name-box {
@@ -83,12 +83,22 @@ footer {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
 	text-decoration: none;
-	margin-right: 20px;
+	margin-right: 25px;
 }
 
 .container {
 	width: 960px;
 	margin: 0 auto;
+}
+
+.heading-box {
+	margin-bottom: 15px;
+}
+
+.heading-line {
+	border-bottom: 2px solid #ddd;
+	width: 100%;
+	margin-bottom: 30px;
 }
 
 .main-content {
@@ -98,6 +108,7 @@ footer {
 	background: #fff;
 	line-height: 200%;
 	float: left;
+	border: 1px solid #ccc;
 }
 
 .sidebar {
@@ -107,12 +118,11 @@ footer {
 	background: #fff;
 	float: left;
 	padding-top: 20px;
+	border: 1px solid #ccc;
 }
 
-.header-line {
-	border-bottom: 2px solid #ddd;
-	width: 85%;
-	margin-left: 1px;
+.social-box {
+	margin: 30px 0 30px 5px;
 }
 
 .social-icon {
@@ -120,7 +130,7 @@ footer {
 	max-width: 50px;
 	max-height: 50px;
 	text-decoration: none;
-	margin: 30px 0 30px 5px;
+	margin: 0 5px;
 }
 
 .footer-container {
