--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ footer {
 	position: relative;
 	width: 960px;
 	margin: 0 auto;
-	border-bottom: 3px solid #ccc;
+	border-bottom: 4px solid #ccc;
 }
 
 .name-box {
@@ -83,7 +83,7 @@ footer {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
 	text-decoration: none;
-	margin: 0 15px;
+	margin: 0 25px;
 }
 
 .container {
@@ -95,10 +95,17 @@ footer {
 	margin-bottom: 15px;
 }
 
-.heading-line {
-	border-bottom: 2px solid #ddd;
+.heading-line-h2 {
+	border-bottom: 4px solid #ddd;
 	width: 100%;
 	margin-bottom: 30px;
+}
+
+.heading-line-h3 {
+	border-bottom: 2px solid #ddd;
+	width: 81%;
+	margin-bottom: 30px;
+	margin-left: 20px;
 }
 
 .main-content {
@@ -112,12 +119,12 @@ footer {
 }
 
 .sidebar {
-	width: 240px;
+	width: 200px;
 	margin-left: 20px;
 	text-align: center;
 	background: #fff;
 	float: left;
-	padding: 20px 15px 0px 15px;
+	padding: 20px 30px 0px 30px;
 	border: 1px solid #ccc;
 }
 
@@ -130,7 +137,7 @@ footer {
 	max-width: 50px;
 	max-height: 50px;
 	text-decoration: none;
-	margin: 0 5px;
+	margin: 0 2px;
 }
 
 .footer-container {
